# docuvision

./: CHANGELOG.md  LICENSE  MANIFEST.in  PKG-INFO  README.md  pyproject.toml
.github/workflows/: publish.yml
docuvision/: __init__.py  cli.py  types.py
docuvision.egg-info/: SOURCES.txt
docuvision/classifier/: __init__.py  document_classifier.py
docuvision/detectors/: __init__.py  base.py  clustering.py  contour_detector.py  craft_detector.py  dbnet_detector.py  east_detector.py  paddle_detector.py  registry.py
docuvision/embossed/: __init__.py  pipeline.py
docuvision/masking/: __init__.py  document_masker.py
docuvision/ocr_engines/: __init__.py  base.py  doctr_engine.py  donut_engine.py  easyocr_engine.py  paddleocr_engine.py  registry.py  tesseract_engine.py  trocr_engine.py
docuvision/pipeline/: __init__.py  orchestrator.py
docuvision/preprocessing/: __init__.py  embossed.py  general.py
docuvision/system_profiler/: __init__.py  profiler.py
docuvision/utils/: __init__.py  image_io.py  lazy_import.py  logging.py
tests/: conftest.py  test_core.py
